--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    h1 {
+        @apply text-3xl mb-3;
+    }
+    body {
+        @apply w-screen overflow-hidden
+    }
+}
